--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,15 +1,17 @@
-add_executable(path-finding
+add_executable(path_finding
   main.cpp
   AbstractGrid.cpp
   Application.cpp
   BFS.cpp
+  DFS.cpp
   PathFinding.cpp
 )
 
-# Yep, that's it!
-target_link_libraries(path-finding
+target_compile_features(path_finding PRIVATE cxx_std_17)
+
+target_link_libraries(path_finding
   PUBLIC
-    ImGui-SFML::ImGui-SFML
+  ImGui-SFML::ImGui-SFML
 )
 
 include(Install.cmake)
