--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,10 +10,13 @@
 #
 cmake_minimum_required(VERSION 3.12)
 
-project(imgui-sfml-example
+project(PathFinding
   VERSION 1.0
   LANGUAGES CXX
 )
+
+set(LIBRARY_OUTPUT_PATH "${CMAKE_BINARY_DIR}")
+set(EXECUTABLE_OUTPUT_PATH "${CMAKE_BINARY_DIR}")
 
 add_subdirectory(dependencies)
 add_subdirectory(src)
