--- a/dependencies/CMakeLists.txt
+++ b/dependencies/CMakeLists.txt
@@ -4,17 +4,23 @@ set(SFML_VERSION 2.5.1)
 set(IMGUI_VERSION 1.87)
 # set(IMGUI_SFML_VERSION 2.3)
 
-# It's nice to get stripped-down release zips instead of cloning
-# a repo and checking out a tag
 FetchContent_Declare(
-  SFML
-  URL "https://github.com/SFML/SFML/archive/${SFML_VERSION}.zip"
+  sfml
+  GIT_REPOSITORY "https://github.com/SFML/SFML.git"
+  GIT_TAG        "${SFML_VERSION}"
 )
 
 FetchContent_Declare(
   imgui
   URL "https://github.com/ocornut/imgui/archive/refs/heads/docking.zip"
 )
+
+FetchContent_Declare(
+        spdlog
+        GIT_REPOSITORY https://github.com/gabime/spdlog.git
+        GIT_TAG        v1.x
+)
+
 
 # Or by tag...
 FetchContent_Declare(
@@ -27,12 +33,22 @@ FetchContent_Declare(
   # tags like 'vX.X' corresponding to releases
 )
 
-## finally, let's build
+FetchContent_GetProperties(spdlog)
+if (NOT spdlog_POPULATED)
+    FetchContent_Populate(spdlog)
+    add_subdirectory(${spdlog_SOURCE_DIR} ${spdlog_BINARY_DIR})
+endif()
 
 # SFML
 option(SFML_BUILD_AUDIO "Build audio" OFF)
 option(SFML_BUILD_NETWORK "Build network" OFF)
-FetchContent_MakeAvailable(SFML)
+FetchContent_MakeAvailable(sfml)
+
+# FetchContent_GetProperties(sfml)
+# if(NOT sfml_POPULATED)
+#     FetchContent_Populate(sfml)
+#     add_subdirectory(${sfml_SOURCE_DIR} ${sfml_BINARY_DIR})
+# endif()
 
 # Dear ImGui
 FetchContent_MakeAvailable(imgui)
@@ -43,4 +59,7 @@ option(IMGUI_SFML_FIND_SFML "Use find_package to find SFML" OFF)
 option(IMGUI_SFML_IMGUI_DEMO "Build imgui_demo.cpp" ON)
 
 FetchContent_MakeAvailable(imgui-sfml)
+
+# FetchContent_MakeAvailable(spdlog)
+
 
